--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">TravelPlanner</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="default_web_client_id">146725715638-nht53v34r9haic09hhfsq5uv6fft8g99.apps.googleusercontent.com</string>
+    <string name="default_web_client_id">cBG2UWphuVJT3JL91Pfd5NZw8UmBUv59xU8NjQVE6oEGM0Znzt3LXuN7WNC72cjZHX0ECwbWDYaiZBoNqxTwLa20BO64r4iherTrCpWrrUI5myf2EjVr0QKwP1Gy12Y0</string>
 </resources>
